src/test/deca/syntax/invalid/parenthese1.deca
//Description
//    Vérifier la considération des parenthèses
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

{
print("e";
}
